--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "next": "14.2.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "14.2.6"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.3.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "typescript": "^5"
