--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "emoji-datasource-apple": "^15.1.2",
     "next": "14.2.6"
   },
   "devDependencies": {
