--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.10.0+sha256.355a8ab8dbb6ad41befbef39bc4fd6b5df85e12761d2724bd01f13e878de4b13"
 }
