--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "emoji-datasource-apple": "^15.1.2",
-    "next": "14.2.6"
+    "emoji-datasource": "^15.1.2",
+    "next": "^14.2.17"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -19,6 +19,5 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "typescript": "^5"
-  },
-  "packageManager": "pnpm@9.10.0+sha256.355a8ab8dbb6ad41befbef39bc4fd6b5df85e12761d2724bd01f13e878de4b13"
+  }
 }
