--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@types/node-fetch": "^2.6.12",
     "emoji-datasource": "^15.1.2",
-    "next": "^14.2.17"
+    "next": "^14.2.17",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
